@@ -70,7 +70,7 @@ public class IgnoreArguments {
         List<String> ignored = Optional.ofNullable(this.ignoreResponseCodes).orElse(Collections.emptyList());
         List<String> fromBlackbox = blackbox ? List.of("2xx", "4xx") : Collections.emptyList();
 
-        return Stream.concat(ignored.stream(), fromBlackbox.stream()).collect(Collectors.toList());
+        return Stream.concat(ignored.stream(), fromBlackbox.stream()).toList();
     }
 
     public boolean isIgnoredResponseCode(String receivedResponseCode) {
